fixed background alignment

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -278,9 +278,8 @@ button {
 }
 
 .bodyWrapper {
-  background: #90dcfe url('../images/page-background.jpg') no-repeat 0 -200px;
+  background: #90dcfe url('../images/page-background.jpg') no-repeat 0 -190px;
   background-attachment: fixed;
-  background-size: cover;
   overflow: hidden;
   position: relative;
 }
